deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
   name : wordpress
   namespace: "game" 
   labels:
    environment: development
spec:
  replicas: 2
  selector:
    matchLabels: 
      environment: development
  template:
    metadata:
      labels:
        environment: development
    spec:
     containers:
       - image:  wordpress:latest
         imagePullPolicy: Always
         name:  wordpress
         ports:
         - containerPort: 80
