clusterip-wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: game
spec:
  type: ClusterIP
  selector:
    environment: development 
  ports:
  - port: 80
    targetPort: 80

      #- nodePort: 32000
