node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-service
  namespace: game
spec:
  type: NodePort
  selector:
    environment: development 
  ports:
  - port: 80
    targetPort: 80

      #- nodePort: 32000
