service-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-port-service
  namespace: game
spec:
  type: NodePort
  selector:
    environment: apache
  ports:
  - port: 80
    targetPort: 80

      #- nodePort: 32000
