ingress-resource-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: "apache-ingress"
  namespace: "game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    environment: apache
spec:
  rules: 
    - http: 
        paths:
        - backend:
             service:
              name: "apache-port-service"
              port: 
                number: 80
          path: /*
          pathType: ImplementationSpecific
