ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: "game-ingress"
  namespace: "game"
  annotations:
    spec.ingressClassName: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    environment: development
spec:
  rules: 
    - http: 
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "node-port-service"
                port: 
                  number: 80
